code for taking screnshots in selenium testing

--- a/course/.classpath
+++ b/course/.classpath
@@ -14,5 +14,10 @@
 	<classpathentry kind="lib" path="C:/bhanu/selenium course/selenium driver/selenium-java-3.13.0/libs/httpcore-4.4.9.jar"/>
 	<classpathentry kind="lib" path="C:/bhanu/selenium course/selenium driver/selenium-java-3.13.0/libs/okhttp-3.10.0.jar"/>
 	<classpathentry kind="lib" path="C:/bhanu/selenium course/selenium driver/selenium-java-3.13.0/libs/okio-1.14.1.jar"/>
+	<classpathentry kind="lib" path="C:/bhanu/selenium course/software/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="C:/bhanu/selenium course/software/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/bhanu/selenium course/software/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6-sources.jar"/>
+	<classpathentry kind="lib" path="C:/bhanu/selenium course/software/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6-tests.jar"/>
+	<classpathentry kind="lib" path="C:/bhanu/selenium course/software/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6-test-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
