--- a/TestNG/test-output/old/Loan project/personal loan.properties
+++ b/TestNG/test-output/old/Loan project/personal loan.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=personal loan]
+[SuiteResult context=personal loan][SuiteResult context=Car loan][SuiteResult context=Home loan]
