using DataProviders technique

--- a/TestNG/test-output/old/Loan project/Car loan.properties
+++ b/TestNG/test-output/old/Loan project/Car loan.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=personal loan][SuiteResult context=Car loan][SuiteResult context=Home loan][SuiteResult context=para loan]
+[SuiteResult context=Car loan]
