--- a/TestNG/test-output/old/Loan project/Regression.properties
+++ b/TestNG/test-output/old/Loan project/Regression.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Regression]
+[SuiteResult context=Regression][SuiteResult context=Car loan][SuiteResult context=Home loan][SuiteResult context=personal loan][SuiteResult context=para loan][SuiteResult context= loan]
