--- a/log4j/.classpath
+++ b/log4j/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="src" path="Resources"/>
 	<classpathentry kind="lib" path="C:/bhanu/selenium course/selenium driver/apache-log4j-2.11.1-bin/log4j-api-2.11.1.jar"/>
 	<classpathentry kind="lib" path="C:/bhanu/selenium course/selenium driver/apache-log4j-2.11.1-bin/log4j-core-2.11.1.jar"/>
+	<classpathentry kind="lib" path="C:/bhanu/selenium course/selenium driver/apache-log4j-2.11.1-bin/log4j-jcl-2.11.1.jar"/>
+	<classpathentry kind="lib" path="C:/bhanu/selenium course/selenium driver/commons-logging-1.2/commons-logging-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
